put buttons under the images

--- a/index.html
+++ b/index.html
@@ -54,23 +54,43 @@
     <section id="container-3">
       <div>
         <img src="images/pexels-pixabay-414660.jpg" alt="" class="flex-img-1" />
-        <button type="button">Link to Project</button>
+        <div class="btn-flexbox">
+          <button type="button"><a href="">Link to Github Repo</a></button>
+          <button type="button"><a href="">Link to Site</a></button>
+        </div>
       </div>
 
-      <img src="images/pexels-pixabay-54323.jpg" alt="" class="flex-img-2" />
-      <button type="button">Link to Project</button>
-      <img
-        src="images/pexels-evie-shaffer-3014451.jpg"
-        alt=""
-        class="flex-img-3"
-      />
-      <button type="button">Link to Project</button>
-      <img
-        src="images/pexels-irina-iriser-1408221.jpg"
-        alt=""
-        class="flex-img-4"
-      />
-      <button type="button">Link to Project</button>
+      <div>
+        <img src="images/pexels-pixabay-54323.jpg" alt="" class="flex-img-2" />
+        <div class="btn-flexbox">
+          <button type="button"><a href="">Link to Github Repo</a></button>
+          <button type="button"><a href="">Link to Site</a></button>
+        </div>
+      </div>
+
+      <div>
+        <img
+          src="images/pexels-evie-shaffer-3014451.jpg"
+          alt=""
+          class="flex-img-3"
+        />
+        <div class="btn-flexbox">
+          <button type="button"><a href="">Link to Github Repo</a></button>
+          <button type="button"><a href="">Link to Site</a></button>
+        </div>
+      </div>
+
+      <div>
+        <img
+          src="images/pexels-irina-iriser-1408221.jpg"
+          alt=""
+          class="flex-img-4"
+        />
+        <div class="btn-flexbox">
+          <button type="button"><a href="">Link to Github Repo</a></button>
+          <button type="button"><a href="">Link to Site</a></button>
+        </div>
+      </div>
     </section>
     <footer>
       <p>Designed by ABCDE</p>
