make navbar sticky

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           class="img-2"
         />
       </div>
-      <div>
+      <div class="div-2">
         <h2>Chekwube</h2>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum ab
