--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div>
-        <p><span>C.</span> Peters</p>
+        <p><span>C.</span> Ajulibe</p>
       </div>
       <nav>
         <ul>
@@ -42,7 +42,7 @@
         />
       </div>
       <div class="div-2">
-        <h2>Chekwube</h2>
+        <h2>Jules</h2>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum ab
           facere nulla itaque nemo explicabo odit perspiciatis, at eligendi
